fix sticky minimized group covering header

--- a/src/assets/styles/cmps/_home-header.scss
+++ b/src/assets/styles/cmps/_home-header.scss
@@ -41,6 +41,7 @@
         margin-inline-start: 1em;
         padding: 8px 14px 8px 16px;
         transition: 0.1s ease background-color;
+        cursor: pointer;
         &:hover{
             background-color: #5151d5;
             .start-arrow{
